[project]
name = "datasette-test"
version = "0.3.2"
description = "Utilities to help write tests for Datasette plugins and applications"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Datasette"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "datasette",
    "httpx",
    "packaging",
    "datasette-test-plugin"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-test"
Changelog = "https://github.com/datasette/datasette-test/releases"
Issues = "https://github.com/datasette/datasette-test/issues"
CI = "https://github.com/datasette/datasette-test/actions"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
